# Chokkhu-PyPi-Package

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  test.py  tox.ini
.github/workflows/: ci.yml  publish.yml
src/Chokkhu/: __init__.py  custom_exception.py  logger.py
src/Chokkhu/DeepLearningModel/: __init__.py
src/Chokkhu/DeepLearningModel/Summary/: plots.py
src/Chokkhu/DeepLearningModel/base/: base_classifier.py
src/Chokkhu/DeepLearningModel/convnext/: convnext_tiny.py
src/Chokkhu/DeepLearningModel/eda/: __init__.py  image_eda.py
src/Chokkhu/DeepLearningModel/evaluation/: evaluator.py
src/Chokkhu/DeepLearningModel/preprocessing/: __init__.py  image_preprocess.py
src/Chokkhu/DeepLearningModel/training/: trainer.py
