[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"


[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
strict_optional = false
disallow_untyped_defs = false
check_untyped_defs = true


[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["Chokkhu"]
src_paths = ["src"]


[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
