[metadata]
license = MIT
license_file = LICENSE
url = https://github.com/tamimystic/Chokkhu-PyPi-Package

project_urls =
    Bug Tracker = https://github.com/tamimystic/Chokkhu-PyPi-Package/issues
    Source Code = https://github.com/tamimystic/Chokkhu-PyPi-Package

classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Image classification :: Libraries :: Python Modules


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    tensorflow>=2.12
    numpy>=1.23
    Pillow>=9.0


[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest>=7.2,<9.0
    tox>=3.28,<5.0
    flake8>=6.1,<8.0
    mypy>=1.5,<2.0

dev =
    black>=23.3,<25.0
    isort>=5.12,<7.0
    build>=1.0,<2.0
    twine>=4.0,<6.0


[options.package_data]
Chokkhu = py.typed


[flake8]
max-line-length = 160
exclude =
    __init__.py
    build
    dist
